fixed small screen bug where cover image would be too big

--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@
     position: static;
     transform: scaleX(.99);
 
+    width: 100%;
+
     top: 4.2%;
     left: -1%;
     
